core func works

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ ipython
 confuse
 setuptools
 # app specific 
+pandas
+funcsigs
 click 
 fastapi 
 uvicorn[standard] 
@@ -15,3 +17,4 @@ requests
 # my packages
 git+https://github.com/dexplorer/utils#egg=utils
 git+https://github.com/dexplorer/df-metadata#egg=metadata
+git+https://github.com/dexplorer/df-app-calendar#egg=app_calendar
