--- a/dr_app/cfg/api_log.ini
+++ b/dr_app/cfg/api_log.ini
@@ -12,7 +12,9 @@ level=INFO
 handlers=logfile
 
 [formatter_logfileformatter]
-format=[%(asctime)s.%(msecs)03d] %(levelname)s [%(thread)d] %(filename)s (%(lineno)d) - %(message)s
+; format=[%(asctime)s.%(msecs)03d] %(levelname)s [%(thread)d] %(filename)s (%(lineno)d) - %(message)s
+format=%(asctime)s : %(levelname)s : %(filename)s (%(lineno)d) : %(message)s
+datefmt=%Y-%m-%d %I:%M:%S %p
 
 [handler_logfile]
 class=handlers.RotatingFileHandler
