--- a/dr_app/cfg/config_dev.yaml
+++ b/dr_app/cfg/config_dev.yaml
@@ -1,6 +1,7 @@
 appName: dr_app
 logLevel: INFO
 CONFIG:
+  cfg_file_path: "APP_ROOT_DIR/cfg"
   log_file_path: "APP_ROOT_DIR/log"
   source_file_path: "APP_ROOT_DIR/data"
   warehouse_path: "APP_ROOT_DIR/data/user/hive/warehouse" 
