externalized config setting

--- a/cfg/api_log.ini
+++ b/cfg/api_log.ini
@@ -19,5 +19,5 @@ datefmt=%Y-%m-%d %I:%M:%S %p
 [handler_logfile]
 class=handlers.RotatingFileHandler
 level=INFO
-args=('./dr_app/log/dr_app_api.log','a')
+args=('./log/dr_app_api.log','a')
 formatter=logfileformatter
