--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,11 @@ dependencies = [
   "python-dotenv", 
   "funcsigs", 
   # my packages
+  "utils",
+  "metadata",
+  "app_calendar",
+  "config",
+  # my packages
   #"utils @ git+https://github.com/dexplorer/utils",
   #"metadata @ git+https://github.com/dexplorer/df-metadata",
   #"app_calendar @ git+https://github.com/dexplorer/df-app-calendar",
