--- a/cfg/config_dev.yaml
+++ b/cfg/config_dev.yaml
@@ -3,8 +3,8 @@ logLevel: INFO
 CONFIG:
   APP_CONFIG_DIR: "APP_ROOT_DIR/cfg"
   APP_LOG_DIR: "NAS_ROOT_DIR/log"
-  APP_DATA_IN_DIR: "APP_ROOT_DIR/data/in"
-  APP_DATA_OUT_DIR: "APP_ROOT_DIR/data/out"
+  APP_DATA_IN_DIR: "NAS_ROOT_DIR/data/in"
+  APP_DATA_OUT_DIR: "NAS_ROOT_DIR/data/out"
   APP_SQL_SCRIPT_DIR: "APP_ROOT_DIR/sql"
-  APP_IMG_OUT_DIR: "APP_ROOT_DIR/img"
-  HIVE_WAREHOUSE_DIR: "APP_ROOT_DIR/data/user/hive/warehouse"
+  APP_IMG_OUT_DIR: "NAS_ROOT_DIR/img"
+  HIVE_WAREHOUSE_DIR: "NAS_ROOT_DIR/datalake/user/hive/warehouse"
