configured to run on aws ec2

--- a/cfg/api_log.ini
+++ b/cfg/api_log.ini
@@ -19,5 +19,5 @@ datefmt=%Y-%m-%d %I:%M:%S %p
 [handler_logfile]
 class=handlers.RotatingFileHandler
 level=INFO
-args=('./log/dr_app_api.log','a')
+args=(f"{os.environ['NAS_ROOT_DIR']}/log/dr_app_api.log",'a')
 formatter=logfileformatter
