integrate with aws

--- a/.env.aws_ec2_container
+++ b/.env.aws_ec2_container
@@ -1,20 +1,20 @@
 APP_ENV=dev
 
-# AWS EC2 Native
+# AWS EC2 Docker Container
 APP_INFRA_PLATFORM="aws_ec2"
-APP_HOST_PATTERN="aws_ec2_native"
+APP_HOST_PATTERN="aws_ec2_container"
 LOG_STORAGE_PLATFORM="nas_storage"
 DATA_IN_STORAGE_PLATFORM="nas_aws_s3_storage"
 DATA_OUT_STORAGE_PLATFORM="nas_storage"
-APP_ROOT_DIR=/home/ec2-user/workspaces/df-data-recon
-GLOBAL_CFG_DIR=/home/ec2-user/workspaces/df-config/cfg
+APP_ROOT_DIR=/df-data-recon
+GLOBAL_CFG_DIR=/packages/df-config/cfg
+DEFAULT_ENV_FILE=/packages/df-config/.env.default
 
 LOG_HANDLERS='["timed_rotating_file_handler"]'
-#LOG_HANDLERS='["stream_handler_stdout"]'
 API_HOST=0.0.0.0
 API_PORT=9090
 
-NAS_ROOT_DIR=/home/ec2-user/workspaces/nas
+NAS_ROOT_DIR=/nas
 NAS_LOG_DIR=${NAS_ROOT_DIR}/log
 NAS_DATA_IN_DIR=${NAS_ROOT_DIR}/data/in
 NAS_DATA_OUT_DIR=${NAS_ROOT_DIR}/data/out
