--- a/.env.aws_ecs_container
+++ b/.env.aws_ecs_container
@@ -8,6 +8,7 @@ DATA_IN_STORAGE_PLATFORM="aws_s3_storage"
 DATA_OUT_STORAGE_PLATFORM="aws_s3_storage"
 APP_ROOT_DIR=/df-data-recon
 GLOBAL_CFG_DIR=/packages/df-config/cfg
+DEFAULT_ENV_FILE=/packages/df-config/.env.default
 
 LOG_HANDLERS='["stream_handler_stdout"]'
 API_HOST=0.0.0.0
