--- a/Dockerfile copy
+++ b/Dockerfile copy
@@ -1,5 +1,3 @@
-# syntax=docker.io/docker/dockerfile:1.7-labs
-
 # Base stage - build dependencies
 
 FROM public.ecr.aws/amazonlinux/amazonlinux:latest as builder
@@ -29,7 +27,7 @@ COPY ./Makefile /df-data-recon
 COPY --from=utils . /packages/utils
 COPY --from=df-metadata . /packages/df-metadata
 COPY --from=df-app-calendar . /packages/df-app-calendar
-COPY --from=df-config --exclude=./cfg . /packages/df-config
+COPY --from=df-config . /packages/df-config
 
 # Install app dependencies
 RUN source /venv/bin/activate \
@@ -38,14 +36,14 @@ RUN source /venv/bin/activate \
 # Add hadoop-aws for spark-aws integration
 ARG HADOOP_AWS_VERSION
 ARG AWS_JAVA_SDK_VERSION
-ARG SCALA_VERSION
-ARG SPARK_VERSION
 RUN wget https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-aws/${HADOOP_AWS_VERSION}/hadoop-aws-${HADOOP_AWS_VERSION}.jar -P /venv/lib/python${PYTHON_VERSION}/site-packages/pyspark/jars \
-    && wget https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk-bundle/${AWS_JAVA_SDK_VERSION}/aws-java-sdk-bundle-${AWS_JAVA_SDK_VERSION}.jar -P /venv/lib/python${PYTHON_VERSION}/site-packages/pyspark/jars \
-    && wget https://repo1.maven.org/maven2/org/apache/spark/spark-connect_${SCALA_VERSION}/${SPARK_VERSION}/spark-connect_${SCALA_VERSION}-${SPARK_VERSION}.jar -P /venv/lib/python${PYTHON_VERSION}/site-packages/pyspark/jars
+    && wget https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk-bundle/${AWS_JAVA_SDK_VERSION}/aws-java-sdk-bundle-${AWS_JAVA_SDK_VERSION}.jar -P /venv/lib/python${PYTHON_VERSION}/site-packages/pyspark/jars
+
+# RUN wget https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-aws/${HADOOP_AWS_VERSION}/hadoop-aws-${HADOOP_AWS_VERSION}.jar -P /venv/lib/python${PYTHON_VERSION}/site-packages/pyspark/jars \
+# && wget https://repo1.maven.org/maven2/software/amazon/awssdk/bundle/${AWS_JAVA_SDK_VERSION}/bundle-${AWS_JAVA_SDK_VERSION}.jar -P /venv/lib/python${PYTHON_VERSION}/site-packages/pyspark/jars
 
 # Copy the app source code into the container.
-COPY --exclude=*.env . /df-data-recon
+COPY . /df-data-recon
 
 # Install app 
 RUN source /venv/bin/activate \
@@ -85,7 +83,7 @@ ENV AWS_JAVA_V1_DISABLE_DEPRECATION_ANNOUNCEMENT=true
 COPY --from=builder /venv /venv
 
 # Copy the app source code from current directory (where Dockerfile is) into the container.
-COPY --exclude=*.env . /df-data-recon
+COPY . /df-data-recon
 COPY --from=df-config ./cfg /packages/df-config/cfg
 
 # Expose the port that the application listens on. i.e. container port
@@ -97,7 +95,7 @@ EXPOSE ${CONTAINER_PORT}
 WORKDIR /df-data-recon
 
 # Create a non-privileged user that the app will run under.
-RUN useradd --create-home --shell /bin/bash app-user
+RUN useradd -m -s /bin/bash app-user
 
 # Switch to the non-privileged user to run the application.
 USER app-user
